from enum import Enum


class Semester(Enum):
    FALL = 1
    SPRING = 2
